fix h2 posiiton on mobile

--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -479,7 +479,7 @@ footer {
     section{
       h2:first-of-type {//title
         position:absolute;
-        top: -30px;
+        top: -27px;
       }
     }
     .right {
